--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,12 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Jian Gao",
+            "name": "Gao Jian",
             "email": "gaojianban@gmail.com"
         }
     ],
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": ">=7.1.3",
         "illuminate/config": "5.8.*",
